examples/test/testpolicy8300.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8300
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key36: value48
      key11: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value47
          key41: value43
      podSelector:
        matchLabels:
          key43: value32
          key22: value16
          key2: value17
